<resources>
    <string name="app_name">Child Adhar</string>
    <string name="designed_by_n_kalyanam_pranay">Designed by \n Kalyanam Pranay</string>
    <string name="child_adhar">Child Adhar</string>
    <string name="no_information_is_n_currently_available">No information is \n currently available</string>
    <string name="no_information_is_available">No information \n is available</string>
    <string name="splash_screen_logo">splash screen logo</string>
    <string name="empowering_families_safeguarding_futures_n_because_every_child_s_story_deserves_to_be_cherished">Empowering families, safeguarding futures \n because every child\'s story deserves to be cherished</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="memories">Memories</string>
    <string name="profile">Profile</string>
    <string name="customer_care">Customer Care</string>
    <string name="profile_photo">profile photo</string>
    <string name="first_name">First Name</string>
    <string name="pranay">Pranay</string>
    <string name="last_name">Surname Name</string>
    <string name="kalyanam">Kalyanam</string>
    <string name="email">Email</string>
    <string name="pranay_gmail_com">pranay***@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="save_information">Save Information</string>
    <string name="_9086">9086*****</string>
    <string name="edit">Edit</string>
    <string name="title_of_the_image">Title of the Image</string>
    <string name="date">date</string>
    <string name="memories_pictures">memories pictures</string>
    <string name="add">Add</string>
    <string name="children_details">Children Details</string>
    <string name="see_details">See Details</string>
    <string name="family_details">Family Details</string>
    <string name="family_image">family image</string>
    <string name="child_image">child image</string>
    <string name="family_name">Family Name</string>
    <string name="family_income">Family Income</string>
    <string name="_98_000">98,000/-</string>
    <string name="create_your_memories">Create Your Memories</string>
    <string name="father_name">Father Name</string>
    <string name="mother_name">Mother Name</string>
    <string name="date_of_birth">Date of Birth \n (dd/mm/yy)</string>
    <string name="_07_05_2003">07/05/2003</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="jagtial">Jagtial</string>
    <string name="kalyanam_anjaiah">Kalyanam Anjaiah</string>
    <string name="kalyanam_shylaja">Kalyanam Shylaja</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="permanent_address_of_parents">Permanent Address \n of Parents</string>
    <string name="time_of_birth">Time of Birth</string>
    <string name="_13_23">13:23</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="password">password</string>
    <string name="or">or</string>
    <string name="continue_with">continue with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="email_customer_care">Email Customer Care</string>
    <string name="question1">Q1: How do I add my child\'s details?</string>
    <string name="answer1">Answer: Go to the \'Add Child\' section and fill in the required details such as name, age, and upload an image.</string>
    <string name="question2">Q2: What is \'Help Lost Child\'?</string>
    <string name="answer2">Answer: This feature helps identify a lost child using their fingerprint or the name of their father. It displays their details if available.</string>
    <string name="question3">Q3: Has a issue?</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="child_name">Child Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="disability">Disability</string>
    <string name="eye_blindness">Eye Blindness</string>
    <string name="verify">Verify</string>
    <string name="fingerprint_image">fingerprint image</string>
    <string name="please_verify_your_child_fingerprint_here">Please verify your child fingerprint here</string>
    <string name="lost_child">Lost Child</string>
    <string name="log_out">Log Out</string>
    <string name="search">Search</string>
    <string name="search_by_father_name">Search by parent\'s name</string>
</resources>