<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity">

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginTop="24dp"
      android:importantForAccessibility="no"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/splash_screen_image" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/yeonsung_regular"
      android:text="@string/child_adhar"
      android:textSize="40sp"
      app:layout_constraintEnd_toEndOf="@+id/imageView3"
      app:layout_constraintStart_toStartOf="@+id/imageView3"
      app:layout_constraintTop_toBottomOf="@+id/imageView3" />


  <TextView
      android:id="@+id/textView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/yeonsung_regular"
      android:text="@string/login_to_your_account"
      android:textColor="@color/green_text"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/textView5"
      app:layout_constraintStart_toStartOf="@+id/textView5"
      app:layout_constraintTop_toBottomOf="@+id/textView5" />

  <EditText
      android:id="@+id/loginEmail"
      android:layout_width="325dp"
      android:layout_height="60dp"
      android:layout_marginTop="16dp"
      android:background="@drawable/edit_text_shape"
      android:drawableStart="@drawable/email_icon"
      android:drawablePadding="15dp"
      android:elevation="5dp"
      android:ems="10"
      android:fontFamily="@font/lato_regular"
      android:hint="@string/email"
      android:importantForAutofill="no"
      android:inputType="textEmailAddress"
      android:paddingStart="15dp"
      app:layout_constraintEnd_toEndOf="@+id/textView8"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintStart_toStartOf="@+id/textView8"
      app:layout_constraintTop_toBottomOf="@+id/textView8"
      tools:ignore="RtlSymmetry" />

  <EditText
      android:id="@+id/loginPassword"
      android:layout_width="325dp"
      android:layout_height="60dp"
      android:layout_marginTop="16dp"
      android:background="@drawable/edit_text_shape"
      android:drawableStart="@drawable/password_icon"
      android:drawablePadding="15dp"
      android:elevation="5dp"
      android:ems="10"
      android:fontFamily="@font/lato_regular"
      android:hint="@string/password"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      android:paddingStart="15dp"
      app:layout_constraintEnd_toEndOf="@+id/loginEmail"
      app:layout_constraintStart_toStartOf="@+id/loginEmail"
      app:layout_constraintTop_toBottomOf="@+id/loginEmail"
      tools:ignore="RtlSymmetry,TextContrastCheck" />

  <TextView
      android:id="@+id/textView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:fontFamily="@font/lato_regular"
      android:text="@string/or"
      app:layout_constraintEnd_toEndOf="@+id/loginPassword"
      app:layout_constraintStart_toStartOf="@+id/loginPassword"
      app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

  <TextView
      android:id="@+id/textView10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/lato_regular"
      android:text="@string/continue_with"
      android:textColor="@color/black"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="@+id/textView9"
      app:layout_constraintStart_toStartOf="@+id/textView9"
      app:layout_constraintTop_toBottomOf="@+id/textView9" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/loginGoogleButton"
      android:layout_width="152dp"
      android:layout_height="60dp"
      android:layout_marginTop="16dp"
      android:background="@drawable/white_button_shape"
      android:drawableStart="@drawable/google_icon"
      android:fontFamily="@font/lato_regular"
      android:paddingStart="15dp"
      android:text="@string/google"
      android:textAllCaps="false"
      android:textColor="@color/black"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="@+id/textView10"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="@+id/textView10"
      app:layout_constraintTop_toBottomOf="@+id/textView10"
      tools:ignore="RtlSymmetry" />


  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/loginbutton"
      android:layout_width="152dp"
      android:layout_height="60dp"
      android:layout_marginTop="24dp"
      android:background="@drawable/green_button_shape"
      android:fontFamily="@font/lato_regular"
      android:text="@string/login"
      android:textAllCaps="false"
      android:textColor="@color/white"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/loginGoogleButton"
      tools:ignore="TextContrastCheck" />


  <TextView
      android:id="@+id/textView12"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:fontFamily="@font/yeonsung_regular"
      android:text="@string/designed_by_n_kalyanam_pranay"
      android:textAlignment="center"
      android:textColor="@color/green_text"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>