<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    tools:context=".FamilyDetailsActivity">

    <ScrollView
        android:id="@+id/familyDetailsScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:elevation="3dp"
            android:background="@drawable/profile_text_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/profile_text_background"
                android:elevation="1dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="130dp"
                    android:layout_height="48dp"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center_vertical"
                    android:paddingStart="4dp"
                    android:paddingEnd="2dp"
                    android:text="@string/family_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/familyNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:fontFamily="@font/lato_light"
                    android:gravity="center_vertical"
                    android:importantForAutofill="no"
                    android:inputType="text|textMultiLine"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/kalyanam"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor,TouchTargetSizeCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/profile_text_background"
                android:elevation="1dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="130dp"
                    android:layout_height="48dp"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center_vertical"
                    android:paddingStart="4dp"
                    android:paddingEnd="2dp"
                    android:text="@string/family_income"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/familyIncomeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:fontFamily="@font/lato_light"
                    android:gravity="center_vertical"
                    android:importantForAutofill="no"
                    android:inputType="text|textMultiLine"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/_98_000"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor,TouchTargetSizeCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/profile_text_background"
                android:elevation="1dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center_vertical"
                    android:paddingStart="4dp"
                    android:paddingEnd="2dp"
                    android:text="@string/permanent_address_of_parents"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/familyAddressEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:focusable="false"
                    android:fontFamily="@font/lato_light"
                    android:gravity="start"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/_98_000"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="LabelFor,TouchTargetSizeCheck" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/noInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:rotation="0"
        android:rotationY="10"
        android:text="@string/no_information_is_n_currently_available"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="26sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>